          - Eval.ItemPredictionEval -> Eval.Items
        - recommenders
          - UserAverage, ItemAverage, GlobalAverage: support LoadModel() and
            SaveModel()
          - merge functionality of BiasedMatrixFactorizationMAE into
            BiasedMatrixFactorization
          - SlopeOne: get rid of unnecessary String.Format() call
        - command-line tools
          - rating prediction: add user-defined prediction format
            via the --prediction-line argument
          - item prediction: always obey --relevant-users=FILE and
            --relevant-items=FILE arguments
          - item prediction: improved error messages
        - evaluation
          - add "filtered evaluation" protocol for item recommendation:
            for every user, compute recommendation quality for item sets
            filtered according to given attributes: Eval.ItemsFiltered

1.03	2011-06-22
        - IMPORTANT ANNOUNCEMENT: This may be the last version to support
          Mono 2.6. If you use MyMediaLite and rely on running it on Mono 2.6,
          please contact the authors: mymedialite@ismll.de.
        - web service API
          - add prototype for a SOAP web service for rating prediction, plus
            three test script
        - API changes
          - IRatingPredictor
           - Add() is now AddRating()
           - remove AddUser() and AddItem()
          - IItemRecommender
           - remove AddUser() and AddItem()
          - Util.Recommender.Configure can now be called without a delegate
            argument.
          - IIterativeModel: NumIter is now uint instead of int
	- recommenders
          - new rating predictor FactorWiseMatrixFactorization
          - new rating predictor BiasedMatrixFactorizationMAE, which is BMF
            optimized for MAE instead of RMSE
          - BiasedMatrixFactorization: fixed a wrong constant factor in
            ComputeLoss()
          - BPRMF: add optional bold driver heuristic for learn rate adaptation